# palanca-monorepo

./: .gitignore  .pre-commit-config.yaml  README.md
libs/tradingview-client/: Makefile  README.md  pyproject.toml
libs/tradingview-client/tests/: test_rate_limit_threshold.py  test_tradingview_client.py
libs/tradingview-client/tests/cassettes/test_tradingview_client.py/: TestTradingViewClientReadLatestPrice.test_all_security_types.pickle  TestTradingViewClientReadLatestPrice.test_dataframe.pickle
libs/tradingview-client/tradingview_client/: __init__.py  tradingview_client.py  tradingview_client_exceptions.py  tradingview_client_responses.py  tvdatafeed.py
